syntax = "proto3";
option go_package = "github.com/jaggerzhuang1994/kratos-foundation/proto/kratos_foundation_pb/config_pb";

package kratos_foundation_pb;

import "pubg/jsonschema.proto";
import "google/protobuf/duration.proto";
import "config_pb/common.proto";
import "config_pb/middleware.proto";

message Server {
  // consul 服务发现会有1s左右延迟，所以在kratos生命周期中，
  // 服务deregister之后，不能马上停止服务，需要延迟一段时间后在停止服务，否则服务监听者还没有拉取最新服务列表，服务已经停止。
  // 因此给servers套上一个wrapper用于延迟停止服务。
  optional google.protobuf.Duration stop_delay = 1;
  // 通用中间件配置
  optional ServerMiddleware middleware = 2;
  // http 服务器配置
  optional HttpServerOption http = 3;
  // grpc 服务器配置
  optional GrpcServerOption grpc = 4;
  // logger 配置
  optional ModuleLog log = 5;
}

// 服务器中间件配置
message ServerMiddleware {
  optional Middleware.Timeout timeout = 1;
  optional Middleware.Metadata metadata = 2;
  optional Middleware.Tracing tracing = 3;
  optional Middleware.Metrics metrics = 4;
  optional Middleware.Logging logging = 5;
  optional Middleware.Validator validator = 6;
  optional Middleware.RateLimit rate_limit = 7;
}

message HttpServerOption {
  optional bool disable = 1;
  // 一般不需要指定，默认(tcp) 可选值: "tcp", "tcp4", "tcp6", "unix" or "unixpacket"
  optional string network = 2 [(pubg.jsonschema.field) = {string: {enum: ['tcp', 'tcp4', 'tcp6', 'unix', 'unixpacket']}}];;
  // 服务监听地址，host:port 或者 unix文件地址
  optional string addr = 3;
  // 对外暴露端点
  optional Endpoint endpoint = 4;
  // 禁用strictSlash（如果禁用strictSlash，则 /path/ 和 /path 是2个不同的路由，否则会自动重定向到另一个路由）
  optional bool disable_strict_slash = 5;
  // http 路由前缀
  optional string path_prefix = 6;
  // metrics 路由
  optional Metrics metrics = 7;

  message Metrics {
    // 禁用
    optional bool disable = 1;
    // metrics 路由，默认 /metrics
    optional string path = 2;
  }
}

message GrpcServerOption {
  optional bool disable = 1;
  // 一般不需要指定，默认(tcp)
  optional string network = 2 [(pubg.jsonschema.field) = {string: {enum: ['tcp', 'tcp4', 'tcp6', 'unix', 'unixpacket']}}];;
  // 服务监听地址，host:port
  optional string addr = 3;
  // 对外暴露端点
  optional Endpoint endpoint = 4;
  // customHealth 是否自定义健康检查，默认否（使用 grpc 自带的健康端点）
  optional bool custom_health = 5;
  // disableReflection 是否禁用服务反射
  optional bool disable_reflection = 6;
}
